Updated formatting for the boat code including adding files to hold device configs and system data as well as updating references to drivers that have changed.

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ auto_nav/.vscode/
 # Build files 
 auto_nav/build/
 
+# Application files 
+auto_nav/sources/system_data/gps_coordinates.cpp 
+
 #========================================================================================
 
 #========================================================================================
