--- a/auto_nav/unit_tests/ground_station/makefile
+++ b/auto_nav/unit_tests/ground_station/makefile
@@ -131,6 +131,7 @@ INCLUDE_DIRS += tests                               # Test doubles
 # This is kind of a kludge, but it causes the
 # .o and .d files to be put under objs.
 CPPUTEST_OBJS_DIR = test-obj
+CPPUTEST_OBJS_DIR = test-obj/1/2
 
 CPPUTEST_LIB_DIR = test-lib
 
