--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,17 @@
 # .gitignore 
 
+#========================================================================================
+# Local file configuration 
+
+.vscode/
+build/
+*.code-workspace
+
 # Hidden files 
 .DS_Store 
 __pycache__/
 
-# VS code files 
-.vscode/
-
-# Workspace 
-build/
+#========================================================================================
 
 #========================================================================================
 # Auto Nav 
