Updated referenced and include paths.

--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,40 @@
 # .gitignore 
 
-#========================================================================================
+#==================================================
 # Local file configuration 
 
 .vscode/
+auto_nav/.vscode/
 build/
+auto_nav/build/
 *.code-workspace
 
 # Hidden files 
 .DS_Store 
 __pycache__/
 
-#========================================================================================
+#==================================================
 
-#========================================================================================
+
+#==================================================
+# Configuration 
+
+# System configuration 
+auto_nav/headers/core/system_config.h
+
+#==================================================
+
+
+#==================================================
 # Auto Nav 
-
-# VS code files 
-auto_nav/.vscode/
-
-# Build files 
-auto_nav/build/
 
 # Application files 
 auto_nav/sources/system_data/gps_coordinates.cpp 
 
-#========================================================================================
+#==================================================
 
-#========================================================================================
-# Mission Planning  
 
-# Scripts 
-mission_planning/scripts/file_locations.py 
-
-# Data 
-mission_planning/missions/ 
-
-#========================================================================================
-
-#========================================================================================
+#==================================================
 # Simulation 
 
 # Scripts 
@@ -47,9 +43,10 @@ simulation/scripts/conversions.py
 simulation/scripts/user_interface.py 
 simulation/simulation.py 
 
-#========================================================================================
+#==================================================
 
-#========================================================================================
+
+#==================================================
 # Unit tests 
 
 # Boat 
@@ -73,4 +70,4 @@ auto_nav/unit_tests/modules/test-obj
 auto_nav/unit_tests/modules/*.exe
 auto_nav/unit_tests/modules/*.exe.stackdump
 
-#========================================================================================
+#==================================================
